--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
-chromadb
-torch
-langchain
-pdfminer.six
-instructorembedding
-sentence-transformers
-llama-cpp-python
-chainlit
-faiss-cpu
-google-api-python-client
-html2text
-streamlit
+# MacOS specific for autogpt that i could run
+auto-gptq==0.3.2
+chromadb==0.4.14
+colorama==0.4.6
+coloredlogs==15.0.1
+huggingface-hub==0.17.3
+InstructorEmbedding==1.0.1
+langchain==0.0.317
+llama_cpp_python==0.2.11
+pdfminer.six==20221105
+python-dotenv==1.0.0
+pytube==15.0.0
+rank-bm25==0.2.2
+sentence-transformers==2.2.2
+torch==2.1.0
+transformers==4.34.1
+youtube-transcript-api==0.6.1
