--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,6 @@ rank-bm25==0.2.2
 sentence-transformers==2.2.2
 torch==2.1.0
 transformers==4.34.1
+unstructured==0.10.25
+openpyxl==3.1.2
 youtube-transcript-api==0.6.1
