--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,23 +8,25 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.10,<=3.12"
-pdfminer-six = "^20221105"
+pdfminer-six = "^20231228"
 colorama = "^0.4.6"
-langchain = "^0.0.339"
-langchain-experimental = "^0.0.42"
-youtube-transcript-api = "^0.6.1"
+langchain = "^0.1.0"
+youtube-transcript-api = "^0.6.2"
 pytube = "^15.0.0"
-streamlit = "^1.28.2"
+streamlit = "^1.29.0"
 unstructured = {extras = ["all-docs"], version = "^0.11.8"}
-torch = "^2.1.1"
-duckduckgo-search = "^3.9.6"
-sentence-transformers = "^2.2.2"
-instructorembedding = "^1.0.1"
-llama-cpp-python = "^0.2.18"
-google-api-python-client = "^2.108.0"
+torch = "^2.1.2"
+duckduckgo-search = "^4.1.1"
+llama-cpp-python = "^0.2.27"
+google-api-python-client = "2.95.0"
 faiss-cpu = "^1.7.4"
-chromadb = "^0.4.18"
-ruff = "^0.1.6"
+chromadb = "^0.4.22"
+rank-bm25 = "^0.2.2"
+html2text = "^2020.1.16"
+openai = "^1.6.1"
+langchain-experimental = "0.0.42"
+langchain-community = "^0.0.9"
+langchain-openai = "^0.0.2"
 
 
 [tool.poetry.group.docs.dependencies]
