--- a/requirements.txt
+++ b/requirements.txt
@@ -1,211 +1,19 @@
-aiofiles==23.2.1
-aiohttp==3.9.1
-aiosignal==1.3.1
-altair==5.2.0
-annotated-types==0.6.0
-antlr4-python3-runtime==4.9.3
-anyio==3.7.1
-asgiref==3.7.2
-attrs==23.2.0
-backoff==2.2.1
-bcrypt==4.1.2
-beautifulsoup4==4.12.2
-blinker==1.7.0
-Brotli==1.1.0
-build==1.0.3
-cachetools==5.3.2
-certifi==2023.11.17
-cffi==1.16.0
-chardet==5.2.0
-charset-normalizer==3.3.2
-chroma-hnswlib==0.7.3
-chromadb==0.4.22
-click==8.1.7
+pdfminer-six==20231228
 colorama==0.4.6
-coloredlogs==15.0.1
-contourpy==1.2.0
-cryptography==41.0.7
-cycler==0.12.1
-dataclasses-json==0.6.3
-Deprecated==1.2.14
-diskcache==5.6.3
-duckduckgo-search==3.9.11
-effdet==0.4.1
-emoji==2.9.0
-et-xmlfile==1.1.0
-faiss-cpu==1.7.4
-fastapi==0.108.0
-filelock==3.13.1
-filetype==1.2.0
-flatbuffers==23.5.26
-fonttools==4.47.0
-frozenlist==1.4.1
-fsspec==2023.12.2
-gitdb==4.0.11
-GitPython==3.1.40
-google-api-core==2.15.0
-google-api-python-client==2.111.0
-google-auth==2.26.1
-google-auth-httplib2==0.2.0
-googleapis-common-protos==1.62.0
-grpcio==1.60.0
-h11==0.14.0
-h2==4.1.0
-hpack==4.0.0
-httpcore==1.0.2
-httplib2==0.22.0
-httptools==0.6.1
-httpx==0.26.0
-huggingface-hub==0.20.1
-humanfriendly==10.0
-hyperframe==6.0.1
-idna==3.6
-importlib-metadata==6.11.0
-importlib-resources==6.1.1
-InstructorEmbedding==1.0.1
-iopath==0.1.10
-Jinja2==3.1.2
-joblib==1.3.2
-jsonpatch==1.33
-jsonpath-python==1.0.6
-jsonpointer==2.4
-jsonschema==4.20.0
-jsonschema-specifications==2023.12.1
-kiwisolver==1.4.5
-kubernetes==28.1.0
-langchain==0.0.339
-langchain-experimental==0.0.42
-langdetect==1.0.9
-langsmith==0.0.77
-layoutparser==0.3.4
-llama_cpp_python==0.2.26
-lxml==5.0.0
-Markdown==3.5.1
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-marshmallow==3.20.1
-matplotlib==3.8.2
-mdurl==0.1.2
-mmh3==4.0.1
-monotonic==1.6
-mpmath==1.3.0
-msg-parser==1.2.0
-multidict==6.0.4
-mypy-extensions==1.0.0
--e git+https://github.com/neokd/NeoGPT.git@ef4f19eef9086b5292339506abb48c2f1b96a9f1#egg=neogpt
-networkx==3.2.1
-nltk==3.8.1
-numpy==1.26.3
-oauthlib==3.2.2
-olefile==0.47
-omegaconf==2.3.0
-onnx==1.15.0
-onnxruntime==1.15.1
-opencv-python==4.9.0.80
-openpyxl==3.1.2
-opentelemetry-api==1.22.0
-opentelemetry-exporter-otlp-proto-common==1.22.0
-opentelemetry-exporter-otlp-proto-grpc==1.22.0
-opentelemetry-instrumentation==0.43b0
-opentelemetry-instrumentation-asgi==0.43b0
-opentelemetry-instrumentation-fastapi==0.43b0
-opentelemetry-proto==1.22.0
-opentelemetry-sdk==1.22.0
-opentelemetry-semantic-conventions==0.43b0
-opentelemetry-util-http==0.43b0
-overrides==7.4.0
-packaging==23.2
-pandas==2.1.4
-pdf2image==1.16.3
-pdfminer.six==20221105
-pdfplumber==0.10.3
-pikepdf==8.11.2
-pillow==10.2.0
-portalocker==2.8.2
-posthog==3.1.0
-protobuf==4.25.1
-pulsar-client==3.4.0
-pyarrow==14.0.2
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-pycocotools==2.0.7
-pycparser==2.21
-pydantic==2.5.3
-pydantic_core==2.14.6
-pydeck==0.8.1b0
-Pygments==2.17.2
-pypandoc==1.12
-pyparsing==3.1.1
-pypdf==3.17.4
-pypdfium2==4.25.0
-PyPika==0.48.9
-pyproject_hooks==1.0.0
-pytesseract==0.3.10
-python-dateutil==2.8.2
-python-docx==1.1.0
-python-dotenv==1.0.0
-python-iso639==2024.1.2
-python-magic==0.4.27
-python-multipart==0.0.6
-python-pptx==0.6.23
-pytube==15.0.0
-pytz==2023.3.post1
-PyYAML==6.0.1
-rapidfuzz==3.6.1
-referencing==0.32.0
-regex==2023.12.25
-requests==2.31.0
-requests-oauthlib==1.3.1
-rich==13.7.0
-rpds-py==0.16.2
-rsa==4.9
-ruff==0.1.11
-safetensors==0.4.1
-scikit-learn==1.3.2
-scipy==1.11.4
-sentence-transformers==2.2.2
-sentencepiece==0.1.99
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.0
-socksio==1.0.0
-soupsieve==2.5
-SQLAlchemy==2.0.25
-starlette==0.32.0.post1
-streamlit==1.29.0
-sympy==1.12
-tabulate==0.9.0
-tenacity==8.2.3
-threadpoolctl==3.2.0
-timm==0.9.12
-tokenizers==0.15.0
-toml==0.10.2
-toolz==0.12.0
-torch==2.1.2
-torchvision==0.16.2
-tornado==6.4
-tqdm==4.66.1
-transformers==4.36.2
-typer==0.9.0
-typing-inspect==0.9.0
-typing_extensions==4.9.0
-tzdata==2023.4
-tzlocal==5.2
-unstructured==0.11.8
-unstructured-client==0.15.1
-unstructured-inference==0.7.18
-unstructured.pytesseract==0.3.12
-uritemplate==4.1.1
-urllib3==1.26.18
-uvicorn==0.25.0
-uvloop==0.19.0
-validators==0.22.0
-watchfiles==0.21.0
-websocket-client==1.7.0
-websockets==12.0
-wrapt==1.16.0
-xlrd==2.0.1
-XlsxWriter==3.1.9
-yarl==1.9.4
+langchain==0.1.0
 youtube-transcript-api==0.6.2
-zipp==3.17.0
+pytube==15.0.0
+streamlit==1.29.0
+unstructured==0.11.8 ; extra == 'all-docs'
+torch==2.1.2
+duckduckgo-search==4.1.1
+llama-cpp-python==0.2.27
+google-api-python-client==2.95.0
+faiss-cpu==1.7.4
+chromadb==0.4.22
+rank-bm25==0.2.2
+html2text==2020.1.16
+openai==1.6.1
+langchain-experimental==0.0.42
+langchain-community==0.0.9
+langchain-openai==0.0.2
