updated prompt templates

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,22 @@
-pdfminer-six==2023.12.28
-colorama==0.4.6
-langchain==0.1.0
-youtube-transcript-api==0.6.2
-pytube==15.0.0
-streamlit==1.29.0
-unstructured==0.11.8 
-torch==2.1.2
-duckduckgo-search==4.1.1
-llama-cpp-python==0.2.27
-google-api-python-client==2.95.0
-faiss-cpu==1.7.4
 chromadb==0.4.22
-rank-bm25==0.2.2
+duckduckgo_search==4.3
+faiss-cpu==1.7.4
+google-api-python-client==2.95.0
 html2text==2020.1.16
-openai==1.6.1
-langchain-experimental==0.0.42
+InstructorEmbedding==1.0.1
+langchain==0.1.1
 langchain-community==0.0.13
-langchain-openai==0.0.2
+langchain-core==0.1.16
+langchain-experimental==0.0.42
+langchain-openai==0.0.2.post1
+llama-cpp-python==0.2.34
+openai==1.10.0
+pdfminer.six==20231228
+pytube==15.0.0
+rank-bm25==0.2.2
 rich==13.7.0
 sentence-transformers==2.2.2
-instructorembedding==1.0.1
+streamlit==1.30.0
+torch==2.1.2
+unstructured==0.11.8
+youtube-transcript-api==0.6.2
