--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
 beautifulsoup4==4.12.3
 chardet==5.2.0
-chromadb==0.4.22
+chromadb==0.4.23
+einops==0.7.0
 Flask==3.0.2
 googletrans==3.0.0
 huggingface_hub==0.20.3
-langchain==0.1.5
-langchain_community==0.0.19
-langchain_core==0.1.21
-langchain_experimental==0.0.50
-langchain_openai==0.0.5
-matplotlib==3.8.2
+langchain==0.1.11
+langchain_community==0.0.27
+langchain_core==0.1.30
+langchain_experimental==0.0.53
+langchain_openai==0.0.8
+matplotlib==3.8.3
 numpy==1.26.4
-pandas==2.2.0
+pandas==2.2.1
 pdfminer.six==20231228
 Pillow==10.2.0
 plyer==2.1.0
@@ -21,15 +22,16 @@ pyperclip==1.8.2
 python-dotenv==1.0.1
 PyYAML==6.0.1
 PyYAML==6.0.1
-rich==13.7.0
-scikit_learn==1.4.0
-sentence_transformers==2.2.2
-streamlit==1.30.0
-textblob==0.17.1
+rich==13.7.1
+safetensors==0.4.2
+scikit_learn==1.4.1.post1
+sentence_transformers==2.5.1
+streamlit==1.31.1
+textblob==0.18.0.post0
 tiktoken==0.5.2
 toml==0.10.2
-torch==2.1.2
+torch==2.2.1
 torch_xla==2.2.0
-tqdm==4.66.1
-transformers==4.37.2
+tqdm==4.66.2
+transformers==4.38.1
 vaderSentiment==3.3.2
